Fix image on sidebar tab overflowing

--- a/stylesheets/_sidebar.scss
+++ b/stylesheets/_sidebar.scss
@@ -72,6 +72,13 @@
       color: white;
       font-size: 2em;
     }
+
+    img {
+      width: auto;
+      height: auto;
+      max-width: 100%;
+      max-height: 100%;
+    }
   }
 
 }
